[package]
name = "deschuler"
version = "0.4.0"
authors = ["Timon Klinkert <DenuxPlays@users.noreply.github.com>"]
description = "An async, tokio based scheduling library for rust with a built-in cron builder."
license = "Apache-2.0"
repository = "https://github.com/DenuxPlays/deschuler"
homepage = "https://github.com/DenuxPlays/deschuler"
documentation = "https://docs.rs/deschuler"
readme = "README.md"
edition = "2021"
rust-version = "1.77.0"

[package.metadata.docs.rs]
all-features = true

[lints.clippy]
# Restriction
absolute_paths = "warn"

# Pedantic
wildcard-imports = "deny"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"

# Nursey
cognitive_complexity = "deny"
use_self = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.39.1", features = ["macros", "time", "rt", "sync"] }
time =  { version = "0.3.36", features = ["local-offset"] }

[dependencies]
# Scheduling and event handling
tokio = { version = "1.39.1", features = ["time", "rt", "sync"] }
croner = "2.0.4"

# Time handling
chrono = "0.4.38"
chrono-tz = "0.9.0"

# Logging
tracing = "0.1.40"

# Utilities
derive_builder = "0.20.0"
uuid = { version = "1.10.0", features = ["v4"] }
